--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -10,6 +10,6 @@
 
 We never sell or share your personal information with third parties, except as necessary to deliver our services or comply with legal obligations.
 
-You may request deletion of your data at any time by contacting us at [ceo@edulinkup.dev].</p>
+You may request deletion of your data at any time by contacting us at ceo@edulinkup.dev</p>
 </body>
 </html>
